# mpwn

./: .gitignore  README.md  mpwn.py  pyproject.toml  setup.sh
mpwn/: __init__.py  __main__.py  cli.py  config.py  models.py
mpwn/core/: __init__.py  file_handler.py  patcher.py  script_generator.py
mpwn/libc/: __init__.py  downloader.py  extractor.py  version_manager.py
mpwn/utils/: __init__.py  console.py  pwn_helpers.py  selection.py  system.py
utils/: libc_utils.py
